<resources>
    <string name="app_name">Night Duty Calculator</string>
    <string name="calculate">Calculate Allowance</string>
    <string name="save_record">Save Record</string>
    <string name="export_pdf">Export PDF</string>
    <string name="clear_all">Clear All</string>
    <string name="duty_date">Duty Date</string>
    <string name="duty_from">From Time</string>
    <string name="duty_to">To Time</string>
    <string name="basic_pay">Basic Pay (₹)</string>
    <string name="ceiling_limit">Ceiling Limit (₹)</string>
    <string name="dearness_allowance">Dearness Allowance (%)</string>
    <string name="national_holiday">National Holiday</string>
    <string name="total_duty_hours">Total Duty Hours</string>
    <string name="night_hours_22_00">Night Hours (22:00-00:00)</string>
    <string name="night_hours_00_06">Night Hours (00:00-06:00)</string>
    <string name="total_night_hours">Total Night Hours</string>
    <string name="effective_basic_pay">Effective Basic Pay</string>
    <string name="night_allowance">Night Duty Allowance</string>
    <string name="weekly_rest">Weekly Rest</string>
    <string name="leave_from">Leave From</string>
    <string name="leave_to">Leave To</string>
    <string name="type_of_leave">Type of Leave</string>
    <string name="casual_leave">Casual Leave</string>
    <string name="sick_leave">Sick Leave</string>
    <string name="earned_leave">Earned Leave</string>
    <string name="compensatory_off">Compensatory Off</string>
    <string name="other_leave">Other Leave</string>
</resources>
